--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "publish": "git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin main",
-    "updatedev": "git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin dev"
+    "publish": "git checkout main && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin main",
+    "updatedev": "git checkout dev && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin dev"
   },
   "dependencies": {
     "react": "^18.2.0",
