The majority of desktop styles are done

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-lottie-player": "^1.5.4"
+    "react-lottie-player": "^1.5.4",
+    "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
