--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "updatedev": "git checkout dev && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin dev"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie-player": "^1.5.4",
