--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "publish": "git checkout main && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin main",
+    "updatemain": "git checkout main && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin main",
     "updatedev": "git checkout dev && git add -A && echo 'Enter Commit Message' && read msg && git commit -m \"$msg\" && git push origin dev"
   },
   "dependencies": {
